change style for icons

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="col-5 detailWeather">
-                            <i class="fas fa-cloud-sun mb-2"></i>
+                            <img src="http://openweathermap.org/img/wn/09d@2x.png" alt="">
                             <h1 id="degree">24</h1>
                             <a href="#" class="celsiu" id="celsiu">°c</a>
                             <span>|</span>
@@ -75,23 +75,23 @@
                     <div class="row days">
                         <div class="col-2 day">
                             <p>Mon</p>
-                            <i class="fas fa-cloud-sun-rain"></i>
+                            <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="">
                         </div>
                         <div class="col-2 day">
                             <p>Tue</p>
-                            <i class="fas fa-cloud-sun"></i>
+                            <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="">
                         </div>
                         <div class="col-2 day">
                             <p>Wed</p>
-                            <i class="fas fa-cloud-sun-rain"></i>
+                            <img src="http://openweathermap.org/img/wn/11d@2x.png" alt="">
                         </div>
                         <div class="col-2 day">
                             <p>Thu</p>
-                            <i class="fas fa-wind"></i>
+                            <img src="http://openweathermap.org/img/wn/09d@2x.png" alt="">
                         </div>
                         <div class="col-2 day">
                             <p>Fri</p>
-                            <i class="fas fa-cloud-sun"></i>
+                            <img src="http://openweathermap.org/img/wn/13d@2x.png" alt="">
                         </div>
                     </div>
                 </div>
