change css for show icon

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                                     class="buttonS button-inline color-blue">
                                     
                                 </input>
-                                <button id="current" class="buttonS button-inline color-green">
+                                <!-- <button id="current" class="buttonS button-inline color-green">
                                     Current
-                                </button>
+                                </button> -->
                             </div>
                         </form>
                     </div>
@@ -63,7 +63,10 @@
                             </div>
                         </div>
                         <div class="col-5 detailWeather">
-                            <img src="http://openweathermap.org/img/wn/09d@2x.png" alt="">
+                            <img 
+                                src=".." 
+                                alt=""
+                                id="icon-current-weather">
                             <h1 id="degree">24</h1>
                             <a href="#" class="celsiu" id="celsiu">°c</a>
                             <span>|</span>
