Change convert to F and C

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <i class="fas fa-temperature-low"></i>
                         <span>Weather App</span>
                     </div>
-                    <button class="button button-block">city 1</button>
-                    <button class="button button-block">city 2</button>
-                    <button class="button button-block">city 3</button>
-                    <button class="button button-block">city 4</button>
+                    <button class="button button-block" id="yourCity">yourCity</button>
+                    <button class="button button-block" id="ahvaz">Ahvaz</button>
+                    <button class="button button-block" id="tehran">Tehran</button>
+                    <button class="button button-block" id="shiraz">Shiraz</button>
                 </div>
                 <div class="content">
                     <div class="row">
@@ -68,7 +68,7 @@
                                 alt=""
                                 id="icon-current-weather">
                             <h1 id="degree">24</h1>
-                            <a href="#" class="celsiu" id="celsiu">°c</a>
+                            <a href="#" class="celsiu active" id="celsius">°c</a>
                             <span>|</span>
                             <a href="#" class="fahrenheit" id="fahrenheit">°f</a>
                             <p>humidity: <span id="humidity">35</span>%</p>
