Add forecast weather

--- a/index.html
+++ b/index.html
@@ -75,27 +75,8 @@
                             <p>Wind: <span id="speed">4</span>km/h</p>
                         </div>
                     </div>
-                    <div class="row days">
-                        <div class="col-2 day">
-                            <p>Mon</p>
-                            <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="">
-                        </div>
-                        <div class="col-2 day">
-                            <p>Tue</p>
-                            <img src="http://openweathermap.org/img/wn/02d@2x.png" alt="">
-                        </div>
-                        <div class="col-2 day">
-                            <p>Wed</p>
-                            <img src="http://openweathermap.org/img/wn/11d@2x.png" alt="">
-                        </div>
-                        <div class="col-2 day">
-                            <p>Thu</p>
-                            <img src="http://openweathermap.org/img/wn/09d@2x.png" alt="">
-                        </div>
-                        <div class="col-2 day">
-                            <p>Fri</p>
-                            <img src="http://openweathermap.org/img/wn/13d@2x.png" alt="">
-                        </div>
+                    <div class="row" id="forecast">
+
                     </div>
                 </div>
             </div>
