Add event for cities

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <span>Weather App</span>
                     </div>
                     <button class="button button-block" id="yourCity">yourCity</button>
-                    <button class="button button-block" id="ahvaz">Ahvaz</button>
-                    <button class="button button-block" id="tehran">Tehran</button>
-                    <button class="button button-block" id="shiraz">Shiraz</button>
+                    <button class="button button-block" id="ahvaz" onclick="searchWithCityName('Ahvaz')">Ahvaz</button>
+                    <button class="button button-block" id="tehran" onclick="searchWithCityName('Tehran')">Tehran</button>
+                    <button class="button button-block" id="shiraz" onclick="searchWithCityName('Shiraz')">Shiraz</button>
                 </div>
                 <div class="content">
                     <div class="row">
