--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
                     </div>
                 </div>
             </div>
+        
+        </div>
+        <div class="footer">
+            This project was coded by 
+            <a href="https://twitter.com/somayeh_mahjoob" target="_blank" rel="noopener noreferrer">S.Mahjoob</a> 
+            and is 
+            <a href="https://github.com/somayehmahjoob/Weather-App" target="_blank" rel="noopener noreferrer">
+            open-sourced on GitHub</a> 
         </div>
         <script src="src/index.js"></script>
     </body>
